...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addstory.AddStoryActivity">

    <EditText
        android:id="@+id/ed_add_description"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/my_edit_text_background"
...
        android:text="@string/post_my_location"
        app:layout_constraintEnd_toEndOf="@+id/ed_add_description"
        app:layout_constraintStart_toStartOf="@+id/ed_add_description"
        app:layout_constraintTop_toBottomOf="@+id/ed_add_description" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/upload_story"
        app:layout_constraintEnd_toEndOf="@+id/cb_post_location"
        app:layout_constraintStart_toStartOf="@+id/cb_post_location"
...
