...
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btn_capture"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="@drawable/circle"
        android:contentDescription="@string/capture_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
        app:layout_constraintBottom_toBottomOf="@+id/btn_capture"
        app:layout_constraintEnd_toStartOf="@+id/btn_capture"
        app:layout_constraintStart_toStartOf="@+id/view_bg_transparent"
        app:layout_constraintTop_toTopOf="@+id/btn_capture" />

    <ImageButton
        android:id="@+id/btn_rotate_camera"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/circle"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/rotate_camera"
        android:src="@drawable/ic_camera_rotate"
...
